--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,49 +1,47 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<div class="text-center">
   <br><br>
   <h1>
-    <i class="fa fa-reddit text-primary" ></i>&nbsp;Reddit
+    <i class="fa fa-reddit text-primary" ></i>&nbsp;Reddit 
   </h1>
   <br><br>
 
   <main role="main" class="container">
-      <div class="col-sm-10 offset-sm-1">
-        <div class="jumbotron text-left">
-          <h4>Add a Link</h4><br>
-          <form action="/action_page.php">
+      <div class="col-sm-8 offset-sm-2">
+        <div class="jumbotron text-left p-4">
+          
+          <h4 class="py-2">Add a Link</h4>
+          
+          <form >
             <div class="form-group">
               <label for="title">Title:</label>
-              <input type="text" class="form-control" id="title" placeholder="Enter title here">
+              <input type="text" class="form-control" id="title" #newtitle placeholder="Enter title here">
             </div>
             <div class="form-group">
               <label for="link">Link:</label>
-              <input type="text" class="form-control" id="link" placeholder="Enter link here">
+              <input type="text" class="form-control" id="link" #newlink placeholder="Enter link here">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            
+            <button (click)="addArticle(newtitle,newlink)" class="btn btn-primary">Submit</button>
           </form>
         </div>
-
-        <div class="media text-left py-3">            
-            <div class="points mr-4">
-              <h1 class="text-center align-middle pt-3">5</h1>
-              <p class="text-center">Points</p>
-            </div>
-            <div class="media-body">
-              <h5 class="mt-0">Title of the redit</h5>
-              <p class="text-muted">(Domain Url)</p>
-              <a class="pr-5" href=""><i class="fa fa-arrow-down pr-2"></i>Upvote</a>
-              <a class="" href=""><i class="fa fa-arrow-up px-2"></i>Downvote</a>
-            </div>
-        </div>
-
         
-
+        <div *ngFor="let article of sortedArticles()">
+          <app-article [article]="article"></app-article>
+        </div>
 
       </div>
 
-
-
   </main>
- 
   
+  <br>
+  <hr>
+  <footer>
+    <div>
+      This project is open source <a href="https://github.com/srivinod/reddit/">Improve it</a>
+      <span class="px-4"> srivinod <a href="https://github.com/srivinod/"> Github </a>
+      </span>
+    </div>
+  </footer>
+  <br>
+
 </div>
